--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Andrew,  Venkat",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cloudinary": "^1.17.0",
     "connect-flash": "^0.1.1",
