--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "bcrypt": "^3.0.6",
     "cloudinary": "^1.17.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "flash": "^1.1.0",
     "hbs": "^4.0.6",
     "moment": "^2.24.0",
     "mongoose": "^5.7.11",
     "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^2.2.1"
+    "multer-storage-cloudinary": "^2.2.1",
+    "zxcvbn": "^4.4.2"
   }
 }
