--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon ./server.js -e hbs,js"
+    "server": "nodemon ./server.js -e hbs,js",
+    "start": "node server.js"
   },
   "author": "Andrew,  Venkat",
   "license": "ISC",
@@ -25,5 +26,16 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
     "zxcvbn": "^4.4.2"
-  }
+  },
+  "bin": {
+    "travelog": "seeds.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Browny-123/Travelog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Browny-123/Travelog/issues"
+  },
+  "homepage": "https://github.com/Browny-123/Travelog#readme"
 }
