--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-sslify": "^1.2.0",
     "flash": "^1.1.0",
     "hbs": "^4.0.6",
     "moment": "^2.24.0",
